8220095: Assertion failure when symlink (with different name) is used for lib/modules file

Removed confusing function ClassLoader::is_modules_image(char*)

Reviewed-by: lfoltan, ccheung